improve to dao/model design
