# app/api/user.go
@@ -1,36 +1,36 @@
-package user
+package api
 
 import (
-	"github.com/gogf/gf-demos/app/service/user"
+	"github.com/gogf/gf-demos/app/model"
+	"github.com/gogf/gf-demos/app/service"
 	"github.com/gogf/gf-demos/library/response"
 	"github.com/gogf/gf/net/ghttp"
 	"github.com/gogf/gf/util/gconv"
 )
 
 // 用户API管理对象
-type C struct{}
+var User = new(apiUser)
+
+type apiUser struct{}
 
 // @summary 用户注册接口
 // @tags    用户服务
 // @produce json
-// @param   passport  formData string  true "用户账号名称"
-// @param   password  formData string  true "用户密码"
-// @param   password2 formData string  true "确认密码"
-// @param   nickname  formData string false "用户昵称"
+// @param   entity  body model.ApiUserSignUpReq true "注册请求"
 // @router  /user/signup [POST]
 // @success 200 {object} response.JsonResponse "执行结果"
-func (c *C) SignUp(r *ghttp.Request) {
+func (a *apiUser) SignUp(r *ghttp.Request) {
 	var (
-		data        *SignUpRequest
-		signUpParam *user.SignUpParam
+		apiReq     *model.ApiUserSignUpReq
+		serviceReq *model.ServiceUserSignUpReq
 	)
-	if err := r.Parse(&data); err != nil {
+	if err := r.ParseForm(&apiReq); err != nil {
 		response.JsonExit(r, 1, err.Error())
 	}
-	if err := gconv.Struct(data, &signUpParam); err != nil {
+	if err := gconv.Struct(apiReq, &serviceReq); err != nil {
 		response.JsonExit(r, 1, err.Error())
 	}
-	if err := user.SignUp(signUpParam); err != nil {
+	if err := service.User.SignUp(serviceReq); err != nil {
 		response.JsonExit(r, 1, err.Error())
 	} else {
 		response.JsonExit(r, 0, "ok")
@@ -44,14 +44,14 @@ func (c *C) SignUp(r *ghttp.Request) {
 // @param   password formData string true "用户密码"
 // @router  /user/signin [POST]
 // @success 200 {object} response.JsonResponse "执行结果"
-func (c *C) SignIn(r *ghttp.Request) {
+func (a *apiUser) SignIn(r *ghttp.Request) {
 	var (
-		data *SignInRequest
+		data *model.ApiUserSignInReq
 	)
 	if err := r.Parse(&data); err != nil {
 		response.JsonExit(r, 1, err.Error())
 	}
-	if err := user.SignIn(data.Passport, data.Password, r.Session); err != nil {
+	if err := service.User.SignIn(r.Context(), data.Passport, data.Password); err != nil {
 		response.JsonExit(r, 1, err.Error())
 	} else {
 		response.JsonExit(r, 0, "ok")
@@ -63,8 +63,8 @@ func (c *C) SignIn(r *ghttp.Request) {
 // @produce json
 // @router  /user/issignedin [GET]
 // @success 200 {object} response.JsonResponse "执行结果:`true/false`"
-func (c *C) IsSignedIn(r *ghttp.Request) {
-	response.JsonExit(r, 0, "", user.IsSignedIn(r.Session))
+func (a *apiUser) IsSignedIn(r *ghttp.Request) {
+	response.JsonExit(r, 0, "", service.User.IsSignedIn(r.Context()))
 }
 
 // @summary 用户注销/退出接口
@@ -72,8 +72,8 @@ func (c *C) IsSignedIn(r *ghttp.Request) {
 // @produce json
 // @router  /user/signout [GET]
 // @success 200 {object} response.JsonResponse "执行结果, 1: 未登录"
-func (c *C) SignOut(r *ghttp.Request) {
-	if err := user.SignOut(r.Session); err != nil {
+func (a *apiUser) SignOut(r *ghttp.Request) {
+	if err := service.User.SignOut(r.Context()); err != nil {
 		response.JsonExit(r, 1, err.Error())
 	}
 	response.JsonExit(r, 0, "ok")
@@ -85,14 +85,14 @@ func (c *C) SignOut(r *ghttp.Request) {
 // @param   passport query string true "用户账号"
 // @router  /user/checkpassport [GET]
 // @success 200 {object} response.JsonResponse "执行结果:`true/false`"
-func (c *C) CheckPassport(r *ghttp.Request) {
+func (a *apiUser) CheckPassport(r *ghttp.Request) {
 	var (
-		data *CheckPassportRequest
+		data *model.ApiUserCheckPassportReq
 	)
 	if err := r.Parse(&data); err != nil {
 		response.JsonExit(r, 1, err.Error())
 	}
-	if data.Passport != "" && !user.CheckPassport(data.Passport) {
+	if data.Passport != "" && !service.User.CheckPassport(data.Passport) {
 		response.JsonExit(r, 1, "账号已经存在", false)
 	}
 	response.JsonExit(r, 0, "", true)
@@ -104,14 +104,14 @@ func (c *C) CheckPassport(r *ghttp.Request) {
 // @param   nickname query string true "用户昵称"
 // @router  /user/checknickname [GET]
 // @success 200 {object} response.JsonResponse "执行结果"
-func (c *C) CheckNickName(r *ghttp.Request) {
+func (a *apiUser) CheckNickName(r *ghttp.Request) {
 	var (
-		data *CheckNickNameRequest
+		data *model.ApiUserCheckNickNameReq
 	)
 	if err := r.Parse(&data); err != nil {
 		response.JsonExit(r, 1, err.Error())
 	}
-	if data.Nickname != "" && !user.CheckNickName(data.Nickname) {
+	if data.Nickname != "" && !service.User.CheckNickName(data.Nickname) {
 		response.JsonExit(r, 1, "昵称已经存在", false)
 	}
 	response.JsonExit(r, 0, "ok", true)
@@ -121,7 +121,7 @@ func (c *C) CheckNickName(r *ghttp.Request) {
 // @tags    用户服务
 // @produce json
 // @router  /user/profile [GET]
-// @success 200 {object} user.Entity "用户信息"
-func (c *C) Profile(r *ghttp.Request) {
-	response.JsonExit(r, 0, "", user.GetProfile(r.Session))
+// @success 200 {object} model.User "用户信息"
+func (a *apiUser) Profile(r *ghttp.Request) {
+	response.JsonExit(r, 0, "", service.User.GetProfile(r.Context()))
 }
