# app/model/user.go
@@ -1,7 +1,18 @@
-package user
+// ==========================================================================
+// This is auto-generated by gf cli tool. Fill this file as you wish.
+// ==========================================================================
+
+package model
+
+import (
+	"github.com/gogf/gf-demos/app/model/internal"
+)
+
+// User is the golang structure for table user.
+type User internal.User
 
 // 注册请求参数，用于前后端交互参数格式约定
-type SignUpRequest struct {
+type ApiUserSignUpReq struct {
 	Passport  string `v:"required|length:6,16#账号不能为空|账号长度应当在:min到:max之间"`
 	Password  string `v:"required|length:6,16#请输入确认密码|密码长度应当在:min到:max之间"`
 	Password2 string `v:"required|length:6,16|same:Password#密码不能为空|密码长度应当在:min到:max之间|两次密码输入不相等"`
@@ -9,17 +20,24 @@ type SignUpRequest struct {
 }
 
 // 登录请求参数，用于前后端交互参数格式约定
-type SignInRequest struct {
+type ApiUserSignInReq struct {
 	Passport string `v:"required#账号不能为空"`
 	Password string `v:"required#密码不能为空"`
 }
 
 // 账号唯一性检测请求参数，用于前后端交互参数格式约定
-type CheckPassportRequest struct {
+type ApiUserCheckPassportReq struct {
 	Passport string `v:"required#账号不能为空"`
 }
 
 // 昵称唯一性检测请求参数，用于前后端交互参数格式约定
-type CheckNickNameRequest struct {
+type ApiUserCheckNickNameReq struct {
 	Nickname string `v:"required#昵称不能为空"`
+}
+
+// 注册输入参数
+type ServiceUserSignUpReq struct {
+	Passport string
+	Password string
+	Nickname string
 }
