# app/service/user/user_types.go
@@ -1,9 +1,0 @@
-package user
-
-// 注册输入参数
-type SignUpParam struct {
-	Passport  string
-	Password  string
-	Password2 string
-	Nickname  string
-}
