# swagger/swagger.json
@@ -60,251 +60,6 @@
                 "summary": "WebSocket接口"
             }
         },
-        "/curd/{table}/all": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "快速CURD"
-                ],
-                "summary": "查询多条数据记录",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "操作的数据表",
-                        "name": "table",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "操作的数据库",
-                        "name": "x_schema",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "原始SQL条件语句(可直接提交主键数值)",
-                        "name": "x_where",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "排序语句, 例如: `id desc`",
-                        "name": "x_order",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "分组语句, 例如: `type`",
-                        "name": "x_group",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "分页语句(记录影响限制语句), 例如: `1,100`",
-                        "name": "x_page",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "查询结果",
-                        "schema": {
-                            "$ref": "#/definitions/response.JsonResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/curd/{table}/delete": {
-            "post": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "快速CURD"
-                ],
-                "summary": "删除数据记录",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "操作的数据表",
-                        "name": "table",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "操作的数据库",
-                        "name": "x_schema",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "原始SQL条件语句(可直接提交主键数值)",
-                        "name": "x_where",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "分页语句(记录影响限制语句), 例如: `1,100`",
-                        "name": "x_page",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "执行结果",
-                        "schema": {
-                            "$ref": "#/definitions/response.JsonResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/curd/{table}/one": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "快速CURD"
-                ],
-                "summary": "查询单条数据记录",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "操作的数据表",
-                        "name": "table",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "操作的数据库",
-                        "name": "x_schema",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "原始SQL条件语句(可直接提交主键数值)",
-                        "name": "x_where",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "排序语句, 例如: `id desc`",
-                        "name": "x_order",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "分组语句, 例如: `type`",
-                        "name": "x_group",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "分页语句(记录影响限制语句), 例如: `1,100`",
-                        "name": "x_page",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "查询结果",
-                        "schema": {
-                            "$ref": "#/definitions/response.JsonResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/curd/{table}/save": {
-            "post": {
-                "description": "注意保存的数据通过表单提交，由于提交的数据字段不固定，因此这里没有写字段说明，并且无法通过`swagger`测试。",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "快速CURD"
-                ],
-                "summary": "保存数据记录",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "操作的数据表",
-                        "name": "table",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "操作的数据库",
-                        "name": "x_schema",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "执行结果",
-                        "schema": {
-                            "$ref": "#/definitions/response.JsonResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/curd/{table}/update": {
-            "post": {
-                "description": "注意修改的数据通过表单提交，由于提交的数据字段不固定，因此这里没有写字段说明，并且无法通过`swagger`测试。",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "快速CURD"
-                ],
-                "summary": "更新数据记录",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "操作的数据表",
-                        "name": "table",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "操作的数据库",
-                        "name": "x_schema",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "原始SQL条件语句(可直接提交主键数值)",
-                        "name": "x_where",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "分页语句(记录影响限制语句), 例如: `1,100`",
-                        "name": "x_page",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "执行结果",
-                        "schema": {
-                            "$ref": "#/definitions/response.JsonResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/user/checknickname": {
             "get": {
                 "produces": [
@@ -393,7 +148,7 @@
                     "200": {
                         "description": "用户信息",
                         "schema": {
-                            "$ref": "#/definitions/user.Entity"
+                            "$ref": "#/definitions/model.User"
                         }
                     }
                 }
@@ -464,31 +219,13 @@
                 "summary": "用户注册接口",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "用户账号名称",
-                        "name": "passport",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "用户密码",
-                        "name": "password",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "确认密码",
-                        "name": "password2",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "用户昵称",
-                        "name": "nickname",
-                        "in": "formData"
+                        "description": "注册请求",
+                        "name": "entity",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.ApiUserSignUpReq"
+                        }
                     }
                 ],
                 "responses": {
@@ -503,24 +240,7 @@
         }
     },
     "definitions": {
-        "response.JsonResponse": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "description": "错误码((0:成功, 1:失败, \u003e1:错误码))",
-                    "type": "integer"
-                },
-                "data": {
-                    "description": "返回数据(业务接口定义具体数据结构)",
-                    "type": "object"
-                },
-                "message": {
-                    "description": "提示信息",
-                    "type": "string"
-                }
-            }
-        },
-        "user.Entity": {
+        "internal.User": {
             "type": "object",
             "properties": {
                 "create_at": {
@@ -545,6 +265,43 @@
                 },
                 "update_at": {
                     "description": "更新时间",
+                    "type": "string"
+                }
+            }
+        },
+        "model.ApiUserSignUpReq": {
+            "type": "object",
+            "properties": {
+                "nickname": {
+                    "type": "string"
+                },
+                "passport": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "password2": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.User": {
+            "$ref": "#/definitions/internal.User"
+        },
+        "response.JsonResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "错误码((0:成功, 1:失败, \u003e1:错误码))",
+                    "type": "integer"
+                },
+                "data": {
+                    "description": "返回数据(业务接口定义具体数据结构)",
+                    "type": "object"
+                },
+                "message": {
+                    "description": "提示信息",
                     "type": "string"
                 }
             }
